dist/1.0/bin/sample/retrieveUnpackaged/objects/Price_Data__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_to_Synchronize__c</fullName>
        <description>Technical field used by synchronization mechanism. Used in case of desynchronization. Stores name of the Bundle that contains this price data and should be synchronized.</description>
        <inlineHelpText>Technical field used by synchronization mechanism. Used in case of desynchronization. Stores name of the Bundle that contains this price data and should be synchronized.</inlineHelpText>
        <label>Bundle to Synchronize</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Unique PriceData code which can be used for data synchronization between diferent systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field for synchronization with external systems</inlineHelpText>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultPrice__c</fullName>
        <description>Default price if no price is entered</description>
        <inlineHelpText>Default price if no price is entered</inlineHelpText>
        <label>Default Price</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimalPrice__c</fullName>
        <description>Minimal price value that can be entered during configuration</description>
        <inlineHelpText>Minimal price value that can be entered during configuration</inlineHelpText>
        <label>Minimal Price</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Item__c</fullName>
        <description>Relation to Pricing Item</description>
        <inlineHelpText>Relation to Pricing Item</inlineHelpText>
        <label>Pricing Item</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Price Data</relationshipLabel>
        <relationshipName>Price_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>DAVO field - Required in Billing: Date of validity start;</description>
        <inlineHelpText>Technical field for SK Billing: Date of validity start;</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <label>Price Data</label>
    <nameField>
        <displayFormat>PD-{000000000}</displayFormat>
        <label>Price Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>